fixed spacing for one of the divs

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@ h2{
     font-size: 30px;
     font-weight: 400;
     letter-spacing: 4px;
-    margin-top: 100px;
 }
 .container{
     display: flex;
